Use Java 25 API where possible